# Numsim

./: .clang-format  .gitignore  CMakeLists.txt  clang-format.txt  flake.nix  format.sh  settings.txt
plotting/: pyproject.toml  stabilitiy.py
python/: eval.py  log.org  main.py  main.sh  pyproject.toml
python/profile_mpi1_n1024_1024/: Profiler0.csv
python/profile_mpi1_n256_256/: Profiler0.csv
python/profile_mpi1_n512_512/: Profiler0.csv
python/profile_mpi2_n1024_1024/: Profiler0.csv  Profiler1.csv
python/profile_mpi2_n256_256/: Profiler0.csv  Profiler1.csv
python/profile_mpi2_n512_512/: Profiler0.csv  Profiler1.csv
python/profile_mpi3_n1024_1024/: Profiler0.csv  Profiler1.csv  Profiler2.csv
python/profile_mpi3_n256_256/: Profiler0.csv  Profiler1.csv  Profiler2.csv
python/profile_mpi3_n512_512/: Profiler0.csv  Profiler1.csv  Profiler2.csv
python/profile_mpi4_n1024_1024/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv
python/profile_mpi4_n256_256/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv
python/profile_mpi4_n512_512/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv
python/profile_mpi5_n1024_1024/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv
python/profile_mpi5_n256_256/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv
python/profile_mpi5_n512_512/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv
python/profile_mpi6_n1024_1024/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv
python/profile_mpi6_n256_256/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv
python/profile_mpi6_n512_512/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv
python/profile_mpi7_n1024_1024/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv  Profiler6.csv
python/profile_mpi7_n256_256/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv  Profiler6.csv
python/profile_mpi7_n512_512/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv  Profiler6.csv
python/profile_mpi8_n1024_1024/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv  Profiler6.csv  Profiler7.csv
python/profile_mpi8_n256_256/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv  Profiler6.csv  Profiler7.csv
python/profile_mpi8_n512_512/: Profiler0.csv  Profiler1.csv  Profiler2.csv  Profiler3.csv  Profiler4.csv  Profiler5.csv  Profiler6.csv  Profiler7.csv
src/: CMakeLists.txt  main  main.cc  settings.cpp  settings.h
src/grid/: CMakeLists.txt  grid.cpp  grid.h  indexing.cpp  indexing.h
src/linalg/: espresso.h  matrix.h  vector.h
src/output/: vtk.cpp  vtk.h  vtk_par.cpp  vtk_par.h
src/pde/: derivatives.h  pressuresolvers.cpp  pressuresolvers.h  system.cpp  system.h
src/solvers/: jacoby.cpp  jacoby.h  jacopy.cpp
src/utils/: Logger.cpp  Logger.h  broadcast.cpp  broadcast.h  distributed.h  index.h  partitioning.cpp  partitioning.h  profiler.cpp  profiler.h  settings.cpp  settings.h  textWriter.cpp  textWriter.h
tests/: run_test.cpp  test_grid.cpp  test_vtkout.cpp
